--- a/views/index2.html
+++ b/views/index2.html
@@ -5,7 +5,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Image Search API Microservice</title>
-    <link type="text/css" rel="stylesheet" href="stylesheet.css" />
+    <style type="text/css">
+        h2{
+            text-align: center;
+            color: red;
+        }
+        .container{
+            margin: 0 auto;
+            width: 90%;
+        }
+    </style>
 </head>
 
 <body>
@@ -18,6 +27,20 @@
             Root: <code>https://imageapi-king.herokuapp.com</code><br>
             GitHub: <a href="https://github.com/obinnaeye/image-search-api" target="_blank"><code>https://github.com/obinnaeye/image-search-api</code></a>
         </div>
+        <h4>
+            Functionalities
+        </h4>
+        <ul>
+            <li>
+                totalQueries: the total number of queries to the API.
+            </li>
+            <li>
+                recentQueries: 10 most recent queries to the API sorted by time.
+            </li>
+            <li>
+                images: an array of image data - each has a tumbnail link, link to main image, alt and site url.
+            </li>
+        </ul>
         <h4>
             Sample
         </h4>
