--- a/views/index2.html
+++ b/views/index2.html
@@ -44,7 +44,7 @@
         <h4>
             Sample
         </h4>
-        <code>https://img-search-api-obinnaeye.c9users.io/?q=grace&offset=3</code><br>
+        <code>https://imageapi-king.herokuapp.com/?q=grace&offset=4</code><br>
         <p>
             <ul>
                 <li>
