--- a/views/index2.html
+++ b/views/index2.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Image Search API Microservice</title>
+    <title>Images Search API Microservice</title>
     <style type="text/css">
         h2{
             text-align: center;
